--- a/views/home.erb
+++ b/views/home.erb
@@ -1,107 +1,100 @@
-<!DOCTYPE html>
+
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Le Wagon x Audencia</title>
+    <title>My playground landing</title>
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Merriweather:300,400,700" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link href='style.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,900|Open+Sans:300,400,700" rel="stylesheet">
-    <link href="/style.css" rel='stylesheet'>
+    <link href='style.css' rel='stylesheet'>
   </head>
-
+  
   <body>
     <div id="banner">
-      <img src="images/logo.png" alt="" width="70px">
-      <h1>5 days Bootcamp</h1>
-      <p>Learn digital languages to create your projects</p>
-      <a href="#wufoo-sx0l84z1iszo7g" class="btn btn-lg btn-red">I want more</a>
+        <h1>Le petit singe</h1>
+        <p>Pourquoi nous procrastinons tous?</p>
+        <p>
+            <a href="#" class="btn btn-info btn-lg">Start now</a>
+        </p>
     </div>
 
     <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <!-- div class="card" -->
-          <div class="card">
-            <i class="devicon-html5-plain colored icon-size"></i>
-            <h2>HTML</h2>
-            <p>A project always starts with<strong> the content</strong>.</p>
-          </div>
+        <div class="row"> 
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="card card-blue4">
+                    <img src="images/briefcase.png" alt="picture description" width="100">
+                    <h2>Fast</h2>
+                    <p>A fast app, <strong>very fast</strong> app</p>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="card card-blue">
+                    <img src="images/diamond.png" alt="picture description" width="100">
+                    <h2>Simple</h2>
+                    <p>A simple app, <strong>very simple</strong> app</p>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3">     
+                <div class="card card-blue2">
+                    <img src="images/heart.png" alt="picture description" width="100">
+                    <h2>Awesome</h2>
+                    <p>An awesome app, <strong>very awesome</strong> app</p>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="card card-blue3">
+                    <img src="images/laptop.png" alt="picture description" width="100">
+                    <h2>Beautiful</h2>
+                    <p>A beautiful app, <strong>very beautiful</strong> app</p>
+                </div>
+            </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <!-- div class="card" -->
-          <div class="card">
-            <i class="devicon-css3-plain colored icon-size"></i>
-            <h2>CSS</h2>
-            <p>Define your identity, create your <strong>brand design</strong></p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <!-- div class="card" -->
-          <div class="card">
-            <i class="devicon-ruby-plain colored icon-size"></i>
-            <h2>RUBY</h2>
-            <p>You want to shine, now you can add <strong>some algorithms</strong></p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <!-- div class="card" -->
-          <div class="card">
-            <i class="devicon-rails-plain colored icon-size"></i>
-            <h2>RAILS</h2>
-            <p>A framework to help you <strong>build an app</strong></p>
-          </div>
-        </div>
-      </div>
     </div>
 
-    <div class="cta text-center">
-      <h2>Maybe you need some inspiration</h2>
-      <a class="btn btn-primary" href="search">Search</a>
-    </div>
 
-    <!-- Form -->
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
-        <div id="gif"></div>
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <div id="wufoo-sx0l84z1iszo7g">
-          Fill out my <a href="https://pedrolane.wufoo.com/forms/sx0l84z1iszo7g">online form</a>.
+<div class="container">
+    <div class="row"> 
+        <div class="col-xs-12 col-sm-offset-2 col-sm-8">
+            <div class="form-wufoo">
+                <div id="wufoo-zk3o5fa14ewg02">
+                Fill out my <a href="https://hadigitalmkt.wufoo.com/forms/zk3o5fa14ewg02">online form</a>.
+                </div>
+                <script type="text/javascript">var zk3o5fa14ewg02;(function(d, t) {
+                var s = d.createElement(t), options = {
+                'userName':'hadigitalmkt',
+                'formHash':'zk3o5fa14ewg02',
+                'autoResize':true,
+                'height':'605',
+                'async':true,
+                'host':'wufoo.com',
+                'header':'show',
+                'ssl':true};
+                s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+                s.onload = s.onreadystatechange = function() {
+                var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+                try { zk3o5fa14ewg02 = new WufooForm();zk3o5fa14ewg02.initialize(options);zk3o5fa14ewg02.display(); } catch (e) {}};
+                var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+                })(document, 'script');</script>
+            </div>
         </div>
-      </div>
     </div>
+</div>
 
-    <div id="footer" >
-      <p>This is a playground landing ©Le Wagon</p>
-      <ul class="list-inline">
-        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-      </ul>
+
+    <div id="footer">
+                    <p>This is a playground landing ©Le Wagon</p>
+                    <ul class="list-inline">
+                        <li><a href="#"><i class="fa fa-youtube" id="yt"></i></a></li>
+                        <li><a href="#"><i class="fa fa-facebook" id="fb"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" id="twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-github" id="github"></i></a></li>
+                    </ul>
     </div>
-
-    <!-- For Wuffo form -->
-    <script type="text/javascript">
-      var sx0l84z1iszo7g;(function(d, t) {
-      var s = d.createElement(t), options = {
-      'userName':'pedrolane',
-      'formHash':'sx0l84z1iszo7g',
-      'autoResize':true,
-      'height':'517',
-      'async':true,
-      'host':'wufoo.com',
-      'header':'show',
-      'ssl':true};
-      s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-      s.onload = s.onreadystatechange = function() {
-      var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-      try { sx0l84z1iszo7g = new WufooForm();sx0l84z1iszo7g.initialize(options);sx0l84z1iszo7g.display(); } catch (e) {}};
-      var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-      })(document, 'script');
-    </script>
   </body>
 </html>
